--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 on: push
 jobs: 
     first-jobs:
-        runs-on: windows-latest, macos-latest,ubuntu-latest
+        runs-on: windows-latest
         steps:
             - run: node --version
             - run: npm --version
