--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 on: push
 jobs: 
-    first-jobs:
-        runs-on: windows-latest
+    second-jobs:
+        runs-on: ubuntu-latest
         steps:
             - run: node --version
             - run: npm --version
+            - uses: actions/checkout@v3
+            - run: node index.js
