--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 on: push
 jobs: 
-    second-jobs:
+    third-jobs:
         runs-on: ubuntu-latest
         steps:
             - run: node --version
             - run: npm --version
             - uses: actions/checkout@v3
+            - run: npm install
             - run: node index.js
