--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,7 @@ jobs:
             - uses: actions/checkout@v3
             - run: npm install
             - run: node index.js
+            - run: npx eslint .
+            
+            # - run: npx jest index.js - throws
+            # - run: deployment -s3 bucket -
